# microbit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-0BSD.txt  README.md  Xargo.toml  build.rs  memory.x  microbit.cfg  openocd_program.sh  rust-toolchain.toml
.cargo/: config  config.toml
.github/: bors.toml
.github/scripts/: build-examples.sh
.github/workflows/: changelog.yml  ci.yaml  clippy.yml  rustfmt.yml  sync_master.yaml
examples/: gpio_direct_blinky.rs  gpio_hal_blinky.rs  gpio_hal_ledbutton.rs  gpio_hal_printbuttons.rs  gpio_hal_receivedcf77.rs  i2c_direct_printmagserial.rs  i2c_hal_printmagserial.rs  i2c_haldriver_printmagserial.rs  led_blocking.rs  led_nonblocking.rs  led_rtfm.rs  led_rtic.rs  rng_direct_printrngserial.rs  rng_hal_printrandserial.rs  serial_direct_echo.rs  serial_direct_helloworld.rs  serial_hal_blocking_echo.rs  test_countdown.rs  test_delay.rs  test_timer.rs
examples/analog/: Cargo.toml
examples/analog-v1/: Cargo.toml
examples/analog-v1/src/: main.rs
examples/analog-v2/: Cargo.toml
examples/analog-v2/src/: main.rs
examples/analog/src/: main.rs
examples/ble-beacon/: Cargo.toml
examples/ble-beacon/src/: main.rs
examples/display-blocking/: Cargo.toml
examples/display-blocking/src/: main.rs
examples/display-nonblocking/: Cargo.toml
examples/display-nonblocking/src/: main.rs
examples/display-rtic/: Cargo.toml
examples/display-rtic/src/: main.rs
examples/display-text-rtic/: Cargo.toml
examples/display-text-rtic/src/: main.rs
examples/gpio-direct-blinky/: Cargo.toml
examples/gpio-direct-blinky/src/: main.rs
examples/gpio-hal-blinky/: Cargo.toml
examples/gpio-hal-blinky/src/: main.rs
examples/gpio-hal-ledbutton/: Cargo.toml
examples/gpio-hal-ledbutton/src/: main.rs
examples/gpio-hal-printbuttons/: Cargo.toml
examples/gpio-hal-printbuttons/src/: main.rs
examples/led-blocking/: Cargo.toml
examples/led-blocking/src/: main.rs
examples/led-nonblocking/: Cargo.toml
examples/led-nonblocking/src/: main.rs
examples/led-rtic/: Cargo.toml
examples/led-rtic/src/: main.rs
examples/logo-touch/: Cargo.toml  Embed.toml
examples/logo-touch/src/: main.rs
examples/magnetometer/: Cargo.toml
examples/magnetometer/src/: main.rs
examples/rng-direct/: Cargo.toml
examples/rng-direct/src/: main.rs
examples/rng-hal/: Cargo.toml
examples/rng-hal/src/: main.rs
examples/serial-direct-echo/: Cargo.toml
examples/serial-direct-echo/src/: main.rs
examples/serial-direct-helloworld/: Cargo.toml
examples/serial-hal-blocking-echo/: Cargo.toml
examples/serial-hal-blocking-echo/src/: main.rs  serial_setup.rs
examples/servo/: Cargo.toml
examples/servo/src/: main.rs
examples/v2-microphone/: Cargo.toml
examples/v2-microphone/src/: main.rs
examples/v2-speaker/: Cargo.toml
examples/v2-speaker/src/: main.rs
microbit/: Cargo.toml
microbit-common/: Cargo.toml  README.md
microbit-common/src/: adc.rs  board.rs  gpio.rs  led.rs  lib.rs  logo.rs
microbit-common/src/display/: blocking.rs  image.rs  matrix.rs  mod.rs  timer.rs
microbit-common/src/display/nonblocking/: control.rs  image.rs  matrix.rs  mod.rs  timer.rs
microbit-common/src/v1/: adc.rs  board.rs  gpio.rs  mod.rs
microbit-common/src/v2/: adc.rs  board.rs  gpio.rs  mod.rs
microbit-v2/: Cargo.toml
microbit-v2/src/: lib.rs
microbit/src/: lib.rs
src/: gpio.rs  led.rs  lib.rs
src/display/: control.rs  doc_example.rs  image.rs  matrix.rs  microbit_control.rs  microbit_matrix.rs  microbit_timer.rs  mod.rs  timer.rs
src/peripherals/: uart.rs
src/v1/: gpio.rs
src/v2/: gpio.rs
tools/: capture_example_bloat.sh
xtask/: Cargo.toml
xtask/src/: bump.rs  ci.rs  lib.rs  main.rs  publish.rs
