[package]
authors = ["Daniel Egger <daniel@eggers-club.de>", "Michael Droogleever <droogmic@gmail.com>"]
categories = [
    "hardware-support",
    "embedded",
    "no-std",
]
description = "Board support crate for the BBC Micro:bit"
documentation = "https://docs.rs/microbit"
keywords = [
    "arm",
    "cortex-m",
    "nrf51",
]
license = "0BSD"
name = "microbit"
repository = "https://github.com/therealprof/microbit"
version = "0.6.1"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
nb = "0.1.1"

[dependencies.nrf51-hal]
features = ["rt"]
version = "0.5.4"

[dev-dependencies]
cortex-m-semihosting = "0.3.1"
numtoa = "0.2.3"
dcf77 = "0.1.0"
mag3110 = "0.1.4"
panic-abort = "0.3.1"
panic-semihosting = "0.5.1"

[dev-dependencies.rand]
default-features = false
version = "0.5.5"

[features]
default = ["rt"]
rt = []

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
