[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>", "Michael Droogleever <droogmic@gmail.com>"]
categories = [
    "hardware-support",
    "embedded",
    "no-std",
]
description = "Board support crate for the BBC Micro:bit"
documentation = "https://docs.rs/microbit"
keywords = [
    "arm",
    "cortex-m",
    "nrf51",
]
license = "0BSD"
name = "microbit"
readme = "README.md"
repository = "https://github.com/therealprof/microbit"
version = "0.7.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
nb = "0.1.1"
nrf51-hal = "0.6.0"

[dev-dependencies]
cortex-m-semihosting = "0.3.2"
numtoa = "0.2.3"
dcf77 = "0.1.0"
mag3110 = "0.1.4"
panic-halt = "0.2.0"
rand_chacha = "0.1.0"

[dev-dependencies.rand]
default-features = false
version = "0.6.1"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
