[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>", "Michael Droogleever <droogmic@gmail.com>"]
categories = [
    "hardware-support",
    "embedded",
    "no-std",
]
description = "Board support crate for the BBC Micro:bit"
documentation = "https://docs.rs/microbit"
keywords = [
    "arm",
    "cortex-m",
    "nrf51",
]
license = "0BSD"
name = "microbit"
readme = "README.md"
repository = "https://github.com/therealprof/microbit"
version = "0.8.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
nb = "0.1.2"
nrf51-hal = "0.7.0"
tiny-led-matrix = "1.0.1"

[dev-dependencies]
cortex-m-semihosting = "0.3.5"
numtoa = "0.2.3"
dcf77 = "0.1.0"
mag3110 = "0.1.4"
panic-halt = "0.2.0"
cortex-m-rtfm = "0.5"

[dev-dependencies.rand]
default-features = false
version = "0.7.2"

[dev-dependencies.rand_chacha]
version = "0.2.1"
default-features = false

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
