[package]
name = "microbit-common"
version = "0.13.0"
description = "Implementation details for the BBC Micro:bit board support crates"
edition = "2018"
readme = "../README.md"

repository = "https://github.com/nrf-rs/microbit"
authors = [
  "Daniel Egger <daniel@eggers-club.de>",
  "Michael Droogleever <droogmic@gmail.com>",
  "Rob Young <rob@robyoung.digital>",
]
categories = [
    "hardware-support",
    "embedded",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "nrf",
    "hal",
]
license = "0BSD"

[dependencies]
tiny-led-matrix = "1.0.1"
embedded-hal = "1.0"
embassy-nrf = { version = "0.1.0", features = ["gpiote", "time-driver-rtc1", "reset-pin-as-gpio", "nfc-pins-as-gpio", "time", "defmt", "unstable-pac", "rt"]}
embassy-time = { version = "0.3", default-features = false }
embassy-sync = { version = "0.5", default-features = false }

[features]
doc = []
v1 = [] # "embassy-nrf/nrf51"]
v2 = ["embassy-nrf/nrf52833"]
